--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
         "prettier": "prettier \"**/**.{ts,tsx,js,jsx,json,css,scss,html}\" --write",
         "prettier:check": "prettier \"**/**.{ts,tsx,js,jsx,json,css,scss,html}\" --check",
         "rnlink": "npx react-native link",
-        "start:blank-ios": "bash ./scripts/buildBlank.sh && react-native run-ios",
+        "start:blank-ios": "bash ./scripts/buildBlank.sh && bash ./scripts/installPods.sh && react-native run-ios",
         "start:blank-android": "bash ./scripts/buildBlank.sh && react-native run-android",
-        "start:blank-typescript-ios": "bash ./scripts/buildBlankTypescript.sh && react-native run-ios",
+        "start:blank-typescript-ios": "bash ./scripts/buildBlankTypescript.sh && bash ./scripts/installPods.sh && react-native run-ios",
         "start:blank-typescript-android": "bash ./scripts/buildBlankTypescript.sh && react-native run-android",
-        "start:routing-ios": "bash ./scripts/buildRouting.sh && react-native run-ios",
+        "start:routing-ios": "bash ./scripts/buildRouting.sh && bash ./scripts/installPods.sh && react-native run-ios",
         "start:routing-android": "bash ./scripts/buildRouting.sh && react-native run-android",
-        "start:routing-typescript-ios": "bash ./scripts/buildRoutingTypescript.sh && react-native run-ios",
+        "start:routing-typescript-ios": "bash ./scripts/buildRoutingTypescript.sh && bash ./scripts/installPods.sh && react-native run-ios",
         "start:routing-typescript-android": "bash ./scripts/buildRoutingTypescript.sh && react-native run-android",
-        "start:authentication-ios": "bash ./scripts/buildAuthentication.sh && react-native run-ios",
+        "start:authentication-ios": "bash ./scripts/buildAuthentication.sh && bash ./scripts/installPods.sh && react-native run-ios",
         "start:authentication-android": "bash ./scripts/buildAuthentication.sh && react-native run-android",
-        "start:authentication-typescript-ios": "bash ./scripts/buildAuthenticationTypescript.sh && react-native run-ios",
+        "start:authentication-typescript-ios": "bash ./scripts/buildAuthenticationTypescript.sh && bash ./scripts/installPods.sh && react-native run-ios",
         "start:authentication-typescript-android": "bash ./scripts/buildAuthenticationTypescript.sh && react-native run-android"
     },
     "dependencies": {
