--- a/demo/package.json
+++ b/demo/package.json
@@ -30,11 +30,18 @@
         "@pxblue/icons-svg": "^1.1.1",
         "@pxblue/react-native-components": "^4.1.0",
         "@pxblue/react-native-themes": "^5.0.0",
+        "@react-native-community/masked-view": "^0.1.10",
+        "@react-navigation/drawer": "^5.12.3",
+        "@react-navigation/native": "^5.9.2",
+        "@react-navigation/stack": "^5.14.2",
         "react": "16.13.1",
         "react-native": "0.63.4",
+        "react-native-gesture-handler": "^1.10.1",
         "react-native-modal": "^11.6.1",
         "react-native-paper": "^4.2.0",
+        "react-native-reanimated": "^1.13.2",
         "react-native-safe-area-context": "^3.1.9",
+        "react-native-screens": "^2.17.1",
         "react-native-svg": "^12.1.0",
         "react-native-svg-transformer": "^0.14.3",
         "react-native-vector-icons": "^7.1.0"
