--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
                 command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
             - run:
                 name: Publish @pxblue/react-native-template-blank
-                command:  |
+                command: |
                   cd blank
                   MASTER_VERSION=`node -p "require('./package.json').version"`
                   NPM_LATEST_VERSION=`npm show @pxblue/react-native-template-blank version`
@@ -47,10 +47,34 @@ jobs:
                   fi
             - run:
                 name: Publish @pxblue/react-native-template-blank-typescript
-                command:   |
+                command: |
                   cd blank-typescript
                   MASTER_VERSION=`node -p "require('./package.json').version"`
                   NPM_LATEST_VERSION=`npm show @pxblue/react-native-template-blank-typescript version`
+                  if ! [ $MASTER_VERSION == $NPM_LATEST_VERSION ];
+                  then
+                      npm publish
+                  else
+                      echo "Latest version is already published."
+                  fi
+            - run:
+                name: Publish @pxblue/react-native-template-routing
+                command: |
+                  cd blank-typescript
+                  MASTER_VERSION=`node -p "require('./package.json').version"`
+                  NPM_LATEST_VERSION=`npm show @pxblue/react-native-template-routing version`
+                  if ! [ $MASTER_VERSION == $NPM_LATEST_VERSION ];
+                  then
+                      npm publish
+                  else
+                      echo "Latest version is already published."
+                  fi
+            - run:
+                name: Publish @pxblue/react-native-template-routing-typescript
+                command: |
+                  cd blank-typescript
+                  MASTER_VERSION=`node -p "require('./package.json').version"`
+                  NPM_LATEST_VERSION=`npm show @pxblue/react-native-template-routing-typescript version`
                   if ! [ $MASTER_VERSION == $NPM_LATEST_VERSION ];
                   then
                       npm publish
