--- a/blank/package.json
+++ b/blank/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pxblue/react-native-template-blank",
-    "version": "1.0.0-alpha.0",
+    "version": "1.0.0",
     "keywords": [
         "react native",
         "template",
