--- a/authentication/package.json
+++ b/authentication/package.json
@@ -13,6 +13,9 @@
         "type": "git",
         "url": "https://github.com/pxblue/react-native-cli-templates.git"
     },
+    "scripts": {
+        "publish:package": "set npm_config_yes=true && npx -p @pxblue/publish pxb-publish"
+    },
     "license": "BSD-3-Clause",
     "engines": {
         "node": ">=10"
