--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+version: 2.1
+orbs:
+  gh: circleci/github-cli@1.0.3
 jobs:
     build_project:
         docker:
@@ -59,6 +61,38 @@ jobs:
                 name: Publish @pxblue/react-native-template-authentication-typescript
                 command: |
                   cd authentication-typescript && yarn publish:package -b $CIRCLE_BRANCH
+
+    tag:
+      docker:
+        - image: circleci/node:12.9.1-browsers
+      steps:
+        - checkout
+        - gh/setup
+        - run:
+            name: Tag @pxblue/react-native-template-blank
+            command: |
+              cd blank && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-blank
+        - run:
+            name: Tag @pxblue/react-native-template-blank-typescript
+            command: |
+              cd blank-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-blank-typescript
+        - run:
+            name: Tag @pxblue/react-native-template-routing
+            command: |
+              cd routing && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-routing
+        - run:
+            name: Tag @pxblue/react-native-template-routing-typescript
+            command: |
+              cd routing-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-routing-typescript
+        - run:
+            name: Tag @pxblue/react-native-template-authentication
+            command: |
+              cd authentication && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-authentication
+        - run:
+            name: Tag @pxblue/react-native-template-authentication-typescript
+            command: |
+              cd authentication-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-authentication-typescript
+
 workflows:
     version: 2
     react-native-cli-templates:
@@ -72,3 +106,10 @@ workflows:
                         only:
                             - master
                             - dev
+            - tag:
+                requires:
+                  - build_project
+                filters:
+                  branches:
+                    only:
+                      - master
