--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,27 +72,27 @@ jobs:
             - run:
                 name: Tag @pxblue/react-native-template-blank
                 command: |
-                  cd blank && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-blank
+                  cd blank && yarn tag:package -b $CIRCLE_BRANCH
             - run:
                 name: Tag @pxblue/react-native-template-blank-typescript
                 command: |
-                  cd blank-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-blank-typescript
+                  cd blank-typescript && yarn tag:package -b $CIRCLE_BRANCH
             - run:
                 name: Tag @pxblue/react-native-template-routing
                 command: |
-                  cd routing && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-routing
+                  cd routing && yarn tag:package -b $CIRCLE_BRANCH
             - run:
                 name: Tag @pxblue/react-native-template-routing-typescript
                 command: |
-                  cd routing-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-routing-typescript
+                  cd routing-typescript && yarn tag:package -b $CIRCLE_BRANCH
             - run:
                 name: Tag @pxblue/react-native-template-authentication
                 command: |
-                  cd authentication && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-authentication
+                  cd authentication && yarn tag:package -b $CIRCLE_BRANCH
             - run:
                 name: Tag @pxblue/react-native-template-authentication-typescript
                 command: |
-                  cd authentication-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -cra-template-authentication-typescript
+                  cd authentication-typescript && yarn tag:package -b $CIRCLE_BRANCH
 
 workflows:
     version: 2
