--- a/authentication-typescript/package.json
+++ b/authentication-typescript/package.json
@@ -14,7 +14,8 @@
         "url": "https://github.com/pxblue/react-native-cli-templates.git"
     },
     "scripts": {
-        "publish:package": "set npm_config_yes=true && npx -p @pxblue/publish pxb-publish"
+        "publish:package": "set npm_config_yes=true && npx -p @pxblue/publish pxb-publish",
+        "tag:package": "set npm_config_yes=true && npx -p @pxblue/tag pxb-tag"
     },
     "license": "BSD-3-Clause",
     "engines": {
