Update demo project to run

--- a/demo/ios/ReactNativeCliTemplates/Info.plist
+++ b/demo/ios/ReactNativeCliTemplates/Info.plist
@@ -76,6 +76,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>PXBlueIcons.ttf</string>
 	</array>
 </dict>
 </plist>
