--- a/demo/ios/Podfile
+++ b/demo/ios/Podfile
@@ -17,10 +17,13 @@ target 'ReactNativeCliTemplates' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # use_flipper!
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  # end
+
+  pod 'RNPXBVectorIcons', :path => '../node_modules/@pxblue/react-native-vector-icons'
+
 end
 
 target 'ReactNativeCliTemplates-tvOS' do
