--- a/demo/ios/ReactNativeCliTemplates/Info.plist
+++ b/demo/ios/ReactNativeCliTemplates/Info.plist
@@ -76,7 +76,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
-		<string>PXBlueIcons.ttf</string>
+		<string>BrightlayerUIIcons.ttf</string>
 	</array>
 </dict>
 </plist>
