--- a/demo/package.json
+++ b/demo/package.json
@@ -26,12 +26,12 @@
         "start:authentication-typescript-android": "bash ./scripts/buildAuthenticationTypescript.sh && yarn && react-native run-android"
     },
     "dependencies": {
-        "@pxblue/colors": "^3.0.0",
-        "@pxblue/icons-svg": "^1.2.0",
-        "@pxblue/react-native-auth-workflow": "^4.0.0",
-        "@pxblue/react-native-components": "^6.0.1",
-        "@pxblue/react-native-themes": "^6.0.0",
-        "@pxblue/react-native-vector-icons": "^1.3.0",
+        "@brightlayer-ui/colors": "^3.0.1",
+        "@brightlayer-ui/icons-svg": "^1.7.0",
+        "@brightlayer-ui/react-native-auth-workflow": "^4.0.0-beta.0",
+        "@brightlayer-ui/react-native-components": "^6.0.1",
+        "@brightlayer-ui/react-native-themes": "^6.0.0",
+        "@brightlayer-ui/react-native-vector-icons": "^1.3.1",
         "@react-native-async-storage/async-storage": "^1.14.1",
         "@react-native-community/masked-view": "^0.1.10",
         "@react-navigation/drawer": "^5.12.3",
@@ -58,8 +58,8 @@
     "devDependencies": {
         "@babel/core": "^7.8.4",
         "@babel/runtime": "^7.8.4",
-        "@pxblue/eslint-config": "^2.0.2",
-        "@pxblue/prettier-config": "^1.0.2",
+        "@brightlayer-ui/eslint-config": "^2.0.5",
+        "@brightlayer-ui/prettier-config": "^1.0.3",
         "@react-native-community/eslint-config": "^1.1.0",
         "@types/jest": "^25.2.3",
         "@types/react-native": "^0.64.1",
@@ -87,5 +87,5 @@
             "node"
         ]
     },
-    "prettier": "@pxblue/prettier-config"
+    "prettier": "@brightlayer-ui/prettier-config"
 }
