--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,27 +72,27 @@ jobs:
             - run:
                 name: Tag @pxblue/react-native-template-blank
                 command: |
-                  cd blank && yarn tag:package -b $CIRCLE_BRANCH
+                  cd blank && yarn tag:package -b $CIRCLE_BRANCH -s -blui-blank
             - run:
                 name: Tag @pxblue/react-native-template-blank-typescript
                 command: |
-                  cd blank-typescript && yarn tag:package -b $CIRCLE_BRANCH
+                  cd blank-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-blank-typescription
             - run:
                 name: Tag @pxblue/react-native-template-routing
                 command: |
-                  cd routing && yarn tag:package -b $CIRCLE_BRANCH
+                  cd routing && yarn tag:package -b $CIRCLE_BRANCH -s -blui-routing
             - run:
                 name: Tag @pxblue/react-native-template-routing-typescript
                 command: |
-                  cd routing-typescript && yarn tag:package -b $CIRCLE_BRANCH
+                  cd routing-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-routing-typescript
             - run:
                 name: Tag @pxblue/react-native-template-authentication
                 command: |
-                  cd authentication && yarn tag:package -b $CIRCLE_BRANCH
+                  cd authentication && yarn tag:package -b $CIRCLE_BRANCH -s -blui-authentication
             - run:
                 name: Tag @pxblue/react-native-template-authentication-typescript
                 command: |
-                  cd authentication-typescript && yarn tag:package -b $CIRCLE_BRANCH
+                  cd authentication-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-authentication-typescript
 
 workflows:
     version: 2
