--- a/demo/ios/Podfile
+++ b/demo/ios/Podfile
@@ -22,7 +22,7 @@ target 'ReactNativeCliTemplates' do
   #   flipper_post_install(installer)
   # end
 
-  pod 'RNPXBVectorIcons', :path => '../node_modules/@pxblue/react-native-vector-icons'
+  pod 'RNBLUIVectorIcons', :path => '../node_modules/@brightlayer-ui/react-native-vector-icons'
 
 end
 
