--- a/blank-typescript/package.json
+++ b/blank-typescript/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@brightlayer-ui/react-native-template-blank-typescript",
-    "version": "2.0.0-beta.0",
+    "version": "2.0.0",
     "author": "brightlayer-ui <brightlayer-ui@eaton.com>",
     "keywords": [
         "react native",
