--- a/package.json
+++ b/package.json
@@ -27,7 +27,33 @@
         "precommit": "cd demo && bash ./scripts/buildBlank.sh && cd .. && yarn lint && yarn prettier"
     },
     "dependencies": {
-        "react": "17.0.2"
+        "react": "17.0.2",
+        "@brightlayer-ui/react-native-themes": "^6.0.0",
+        "@brightlayer-ui/colors": "^3.0.1",
+        "@brightlayer-ui/react-native-components": "^6.0.2",
+        "@brightlayer-ui/react-native-vector-icons": "^1.4.1",
+        "react-native-modal": "^13.0.0",
+        "react-native-paper": "^4.11.1",
+        "@brightlayer-ui/icons-svg": "^1.8.1",
+        "react-native-vector-icons": "^9.0.0",
+        "react-native-svg": "^12.1.1",
+        "react-native-gesture-handler": "^2.1.0",
+        "react-native-svg-transformer": "^1.0.0",
+        "react-native-safe-area-context": "^3.3.2",
+        "@react-native-community/masked-view": "^0.1.11",
+        "@react-navigation/drawer": "^6.1.8",
+        "@react-navigation/native": "^6.0.6",
+        "@react-navigation/stack": "^6.0.11",
+        "react-native-reanimated": "^2.3.1",
+        "react-native-screens": "^3.10.1",
+        "@brightlayer-ui/react-native-auth-workflow": "^4.0.0",
+        "@react-native-async-storage/async-storage": "^1.15.14",
+        "date-fns": "^2.28.0",
+        "i18next": "^21.6.5",
+        "react-i18next": "^11.15.3",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
+        "react-native-pager-view": "^5.4.9",
+        "react-native-webview": "^11.15.1"
     },
     "devDependencies": {
         "@brightlayer-ui/eslint-config": "^2.0.5",
@@ -38,7 +64,8 @@
         "eslint": "^8.6.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.28.0",
-        "typescript": "^4.5.4"
+        "typescript": "^4.5.4",
+        "jest-transform-stub": "^2.0.0"
     },
     "prettier": "@brightlayer-ui/prettier-config"
 }
