--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
 jobs:
     build_project:
         docker:
-            - image: circleci/node:12.9.1-browsers
+            - image: cimg/node:14.19.0-browsers
         working_directory: ~/react-native-cli-templates
         steps:
             - checkout
@@ -30,7 +30,7 @@ jobs:
 
     publish:
         docker:
-          - image: circleci/node:12.9.1-browsers
+          - image: cimg/node:14.19.0-browsers
         steps:
             - checkout
             - run:
@@ -65,7 +65,7 @@ jobs:
 
     tag:
         docker:
-            - image: circleci/node:12.9.1-browsers
+            - image: cimg/node:14.19.0-browsers
         steps:
             - checkout
             - gh/setup
