--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "start:authentication-android": "cd demo && yarn start:authentication-android",
         "start:authentication-typescript-ios": "cd demo && yarn start:authentication-typescript-ios",
         "start:authentication-typescript-android": "cd demo && yarn start:authentication-typescript-android",
-        "precommit": "cd demo && bash ./scripts/buildBlank.sh && cd .. && yarn lint && yarn prettier"
+        "precommit": "cd demo && bash ./scripts/buildBlank.sh && cd .. && yarn lint && yarn prettier && yarn generate:licenses",
+        "generate:licenses": "npm-license-crawler -onlyDirectDependencies -json LICENSES.json"
     },
     "dependencies": {
         "react": "16.13.1"
@@ -38,6 +39,7 @@
         "eslint": "^7.11.0",
         "eslint-config-prettier": "^6.13.0",
         "eslint-plugin-react": "^7.0.0",
+        "npm-license-crawler": "^0.2.1",
         "typescript": "^3.8.3"
     },
     "prettier": "@brightlayer-ui/prettier-config"
