--- a/authentication/package.json
+++ b/authentication/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@brightlayer-ui/react-native-template-authentication",
-    "version": "2.0.0",
+    "version": "2.1.0-beta.0",
     "author": "brightlayer-ui <brightlayer-ui@eaton.com>",
     "keywords": [
         "react native",
