--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  gh: circleci/github-cli@1.0.3
+    gh: circleci/github-cli@1.0.3
 jobs:
     build_project:
         docker:
@@ -30,38 +30,26 @@ jobs:
 
     publish:
         docker:
-          - image: cimg/node:14.19.0-browsers
+            - image: cimg/node:14.19.0-browsers
         steps:
             - checkout
             - run:
-                name: Authenticate with registry
-                command: |
-                  echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-                  echo "//registry.yarnpkg.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+                  name: Authenticate with registry
+                  command: |
+                      echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+                      echo "//registry.yarnpkg.com/:_authToken=$NPM_TOKEN" >> ~/.npmrc
             - run:
-                name: Publish @brightlayer-ui/react-native-template-blank
-                command: |
-                  cd blank && yarn publish:package -b $CIRCLE_BRANCH
+                  name: Publish @brightlayer-ui/react-native-template-blank-typescript
+                  command: |
+                      cd blank-typescript && yarn publish:package -b $CIRCLE_BRANCH
             - run:
-                name: Publish @brightlayer-ui/react-native-template-blank-typescript
-                command: |
-                  cd blank-typescript && yarn publish:package -b $CIRCLE_BRANCH
+                  name: Publish @brightlayer-ui/react-native-template-routing-typescript
+                  command: |
+                      cd routing-typescript && yarn publish:package -b $CIRCLE_BRANCH
             - run:
-                name: Publish @brightlayer-ui/react-native-template-routing
-                command: |
-                  cd routing && yarn publish:package -b $CIRCLE_BRANCH
-            - run:
-                name: Publish @brightlayer-ui/react-native-template-routing-typescript
-                command: |
-                  cd routing-typescript && yarn publish:package -b $CIRCLE_BRANCH
-            - run:
-                name: Publish @brightlayer-ui/react-native-template-authentication
-                command: |
-                  cd authentication && yarn publish:package -b $CIRCLE_BRANCH
-            - run:
-                name: Publish @brightlayer-ui/react-native-template-authentication-typescript
-                command: |
-                  cd authentication-typescript && yarn publish:package -b $CIRCLE_BRANCH
+                  name: Publish @brightlayer-ui/react-native-template-authentication-typescript
+                  command: |
+                      cd authentication-typescript && yarn publish:package -b $CIRCLE_BRANCH
 
     tag:
         docker:
@@ -70,29 +58,17 @@ jobs:
             - checkout
             - gh/setup
             - run:
-                name: Tag @brightlayer-ui/react-native-template-blank
-                command: |
-                  cd blank && yarn tag:package -b $CIRCLE_BRANCH -s -blui-blank
+                  name: Tag @brightlayer-ui/react-native-template-blank-typescript
+                  command: |
+                      cd blank-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-blank-typescript
             - run:
-                name: Tag @brightlayer-ui/react-native-template-blank-typescript
-                command: |
-                  cd blank-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-blank-typescription
+                  name: Tag @brightlayer-ui/react-native-template-routing-typescript
+                  command: |
+                      cd routing-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-routing-typescript
             - run:
-                name: Tag @brightlayer-ui/react-native-template-routing
-                command: |
-                  cd routing && yarn tag:package -b $CIRCLE_BRANCH -s -blui-routing
-            - run:
-                name: Tag @brightlayer-ui/react-native-template-routing-typescript
-                command: |
-                  cd routing-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-routing-typescript
-            - run:
-                name: Tag @brightlayer-ui/react-native-template-authentication
-                command: |
-                  cd authentication && yarn tag:package -b $CIRCLE_BRANCH -s -blui-authentication
-            - run:
-                name: Tag @brightlayer-ui/react-native-template-authentication-typescript
-                command: |
-                  cd authentication-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-authentication-typescript
+                  name: Tag @brightlayer-ui/react-native-template-authentication-typescript
+                  command: |
+                      cd authentication-typescript && yarn tag:package -b $CIRCLE_BRANCH -s -blui-authentication-typescript
 
 workflows:
     version: 2
@@ -100,17 +76,17 @@ workflows:
         jobs:
             - build_project
             - publish:
-                requires:
-                    - build_project
-                filters:
-                    branches:
-                        only:
-                          - master
-                          - dev
+                  requires:
+                      - build_project
+                  filters:
+                      branches:
+                          only:
+                              - master
+                              - dev
             - tag:
-                requires:
-                  - build_project
-                filters:
-                    branches:
-                        only:
-                          - master
+                  requires:
+                      - build_project
+                  filters:
+                      branches:
+                          only:
+                              - master
