--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-react": "^7.33.2",
         "npm-license-crawler": "^0.2.1",
+        "prettier": "^3.2.5",
         "typescript": "5.0.3"
     },
     "prettier": "@brightlayer-ui/prettier-config"
