--- a/blank-typescript/template/package.json
+++ b/blank-typescript/template/package.json
@@ -42,6 +42,7 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "globals": "^15.1.0",
         "jest": "^29.6.3",
+        "jest-transform-stub": "^2.0.0",
         "prettier": "2.8.8",
         "react-test-renderer": "18.2.0",
         "typescript": "5.0.4",
