--- a/authentication-typescript/template/package.json
+++ b/authentication-typescript/template/package.json
@@ -12,7 +12,7 @@
         "test": "jest"
     },
     "dependencies": {
-        "@brightlayer-ui/react-native-auth-workflow": "6.0.0-alpha.2",
+        "@brightlayer-ui/react-native-auth-workflow": "^6.0.0",
         "@brightlayer-ui/react-native-components": "^8.0.2",
         "@brightlayer-ui/react-native-themes": "^7.0.0",
         "@brightlayer-ui/react-native-vector-icons": "^2.2.0",
