--- a/authentication-typescript/package.json
+++ b/authentication-typescript/package.json
@@ -8,7 +8,7 @@
         "brightlayer-ui",
         "cli"
     ],
-    "description": "A template with pre-configured login workflow and routing for React Native projects created with the Brightlayer UI CLI.",
+    "description": "A template with pre-configured login workflow and routing for React Native projects created with the React Native CLI.",
     "repository": {
         "type": "git",
         "url": "https://github.com/etn-ccis/blui-react-native-cli-templates.git"
