--- a/authentication-typescript/package.json
+++ b/authentication-typescript/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@brightlayer-ui/react-native-template-authentication-typescript",
-    "version": "3.0.0",
+    "version": "3.0.0-alpha.2",
     "author": "brightlayer-ui <brightlayer-ui@eaton.com>",
     "keywords": [
         "react native",
